[gd_scene load_steps=45 format=2]

[ext_resource path="res://Scenes/Level/Enemy Environments/LaserCaster.gd" type="Script" id=1]
[ext_resource path="res://Assets/VFX/VFX_Textures/Textures/Sp_VFX_ShieldHit_Neutral.png" type="Texture" id=2]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserVFX_I.png" type="Texture" id=3]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 1Laser_Movemnt.png" type="Texture" id=4]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 2Laser_Movemnt.png" type="Texture" id=5]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 7Laser_Movemnt.png" type="Texture" id=6]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 8Laser_Movemnt.png" type="Texture" id=7]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserVFX_IV.png" type="Texture" id=8]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 5Laser_Movemnt.png" type="Texture" id=9]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 3Laser_Movemnt.png" type="Texture" id=10]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 6Laser_Movemnt.png" type="Texture" id=11]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 9Laser_Movemnt.png" type="Texture" id=12]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 10Laser_Movemnt.png" type="Texture" id=13]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 11Laser_Movemnt.png" type="Texture" id=14]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserVFX_III.png" type="Texture" id=15]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 12Laser_Movemnt.png" type="Texture" id=16]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserVFX_II.png" type="Texture" id=17]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 4Laser_Movemnt.png" type="Texture" id=18]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 20Laser_Movemnt.png" type="Texture" id=19]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 14Laser_Movemnt.png" type="Texture" id=20]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 18Laser_Movemnt.png" type="Texture" id=21]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 13Laser_Movemnt.png" type="Texture" id=22]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 19Laser_Movemnt.png" type="Texture" id=23]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 16Laser_Movemnt.png" type="Texture" id=24]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 17Laser_Movemnt.png" type="Texture" id=25]
[ext_resource path="res://Assets/VFX/VFX_Textures/Laser/LaserMovement/Asset 15Laser_Movemnt.png" type="Texture" id=26]

[sub_resource type="Gradient" id=18]
offsets = PoolRealArray( 0, 0.466667, 0.759259, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.652344, 0.652344, 0.652344, 1, 0.574707, 0.574707, 0.574707, 1, 1, 1, 1, 1 )

[sub_resource type="AnimatedTexture" id=16]
flags = 4
frames = 20
fps = 40.0
frame_0/texture = ExtResource( 4 )
frame_1/texture = ExtResource( 5 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 10 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 18 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 9 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 11 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 6 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 7 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 12 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 13 )
frame_9/delay_sec = 0.0
frame_10/texture = ExtResource( 14 )
frame_10/delay_sec = 0.0
frame_11/texture = ExtResource( 16 )
frame_11/delay_sec = 0.0
frame_12/texture = ExtResource( 22 )
frame_12/delay_sec = 0.0
frame_13/texture = ExtResource( 20 )
frame_13/delay_sec = 0.0
frame_14/texture = ExtResource( 26 )
frame_14/delay_sec = 0.0
frame_15/texture = ExtResource( 24 )
frame_15/delay_sec = 0.0
frame_16/texture = ExtResource( 25 )
frame_16/delay_sec = 0.0
frame_17/texture = ExtResource( 21 )
frame_17/delay_sec = 0.0
frame_18/texture = ExtResource( 23 )
frame_18/delay_sec = 0.0
frame_19/texture = ExtResource( 19 )
frame_19/delay_sec = 0.0

[sub_resource type="CanvasItemMaterial" id=15]

[sub_resource type="Curve" id=13]
min_value = -10.0
max_value = 10.0
_data = [ Vector2( 0, -10 ), 0.0, 0.0, 0, 0, Vector2( 1, 10 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.604839, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
max_value = 3.0
_data = [ Vector2( 0, 0.952454 ), 0.0, 0.0, 0, 0, Vector2( 0.496491, 1.90951 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.5
flag_disable_z = true
spread = 15.0
gravity = Vector3( 0, -15, 0 )
initial_velocity = 1000.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_curve = SubResource( 14 )
scale = 3.76
scale_random = 1.0
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[sub_resource type="AnimatedTexture" id=17]
flags = 4
frames = 4
fps = 16.0
frame_0/texture = ExtResource( 3 )
frame_1/texture = ExtResource( 17 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 15 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 8 )
frame_3/delay_sec = 0.0

[sub_resource type="Curve" id=19]
min_value = -15.0
max_value = 15.0
_data = [ Vector2( 0, 15 ), 0.0, 0.0, 0, 0, Vector2( 1, -15 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=20]
curve = SubResource( 19 )

[sub_resource type="ParticlesMaterial" id=9]
lifetime_randomness = 0.3
trail_divisor = 2
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2000.0
angular_velocity = 15.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 15.0
angle_random = 1.0
angle_curve = SubResource( 20 )
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[sub_resource type="AnimatedTexture" id=21]
flags = 4
frames = 4
fps = 16.0
frame_0/texture = ExtResource( 8 )
frame_1/texture = ExtResource( 15 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 17 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 3 )
frame_3/delay_sec = 0.0

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.201031, 0.273196, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=10]
resource_local_to_scene = true
emission_shape = 2
emission_box_extents = Vector3( 100, 2, 1 )
flag_disable_z = true
spread = 53.9
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
damping_random = 0.5
scale = 0.02
scale_random = 0.01
color_ramp = SubResource( 12 )
hue_variation = 0.05
hue_variation_random = 1.0

[node name="LaserCaster" type="RayCast2D"]
enabled = true
cast_to = Vector2( 200, 0 )
collision_mask = 5
script = ExtResource( 1 )
damagePerSecond = 2000.0

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 200, 0 )
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 18 )
texture = SubResource( 16 )
texture_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="ShootPointparticles" type="Particles2D" parent="."]
visible = false
material = SubResource( 15 )
position = Vector2( -13, 0 )
scale = Vector2( 0.1, 0.1 )
amount = 20
lifetime = 0.75
process_material = SubResource( 8 )
texture = SubResource( 17 )

[node name="CollisionParticles" type="Particles2D" parent="."]
modulate = Color( 6, 6, 6, 1 )
scale = Vector2( 0.1, 0.1 )
amount = 48
lifetime = 0.3
process_material = SubResource( 9 )
texture = SubResource( 21 )

[node name="BeamParticles" type="Particles2D" parent="."]
visible = false
modulate = Color( 6, 6, 6, 1 )
position = Vector2( 100, 0 )
emitting = false
amount = 5
lifetime = 0.25
speed_scale = 0.5
visibility_rect = Rect2( -500, -500, 1000, 1000 )
local_coords = false
process_material = SubResource( 10 )
texture = ExtResource( 2 )
